# Najeeb_chatbot

./: .gitignore  config.py  manage.py  preprocessing.ipynb  pyproject.toml  questions_with_answers.json  readme.md  requirements.txt  scraper.py
chatbot/: README.md  app.py  bot.py  gg.ipynb  index.html
data/: deployment_services.json  enriched_services_data.json  scraped_services_data.json  services_by_category.json  services_matrix.pkl  vectorizer.pkl
preprocess/: camel_pipeline.py  camel_test.ipynb  pipeline.ipynb  scraped_data.json  service_tfidf_matrix.npz  services_with_keywords.json  tfidf_vectorizer.pkl
preprocessing/: README.md  preprocess.py
scrape/: get_services_urls.py  readme.md  scraped_services_data.json  scraper.py  services_by_category.json
scraping/: get_services_urls.py  readme.md  scraper.py
technical documentaions/: API test.ipynb  PROJECT_STRUCTURE.md  preprocessing_pipeline.ipynb  scraping.md
technical documentation/: scraping_notes.md
